@@ -1,3 +1,7 @@
+2006-08-24  Miguel de Icaza  <miguel@novell.com>
+
+	* src/gport.c: Start routines used in porting applications. 
+
 2006-08-23  Miguel de Icaza  <miguel@novell.com>
 
 	* src/gerror.c: Implement. 
